# vpn-panel

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER-INSTALL.md  Dockerfile  FINAL_STATUS.md  INSTALL_PYTHON_FIRST.txt  PRODUCTION_READY.md  README.md  READY_TO_RUN.md  SETUP_INSTRUCTIONS.md  alembic.ini  alembic.ini.example  check_uvicorn.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quick_test.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup-frontend.ps1  test_and_run.py  test_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
alembic/: env.py
backend/: .env.example  __init__.py  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  api.py  deps.py
backend/app/api/endpoints/: auth.py  dashboard.py  nodes.py  subscriptions.py  users.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  config.py  devices.py  docs.py  monitor.py  node.py  subscription.py  users.py  vpn_user.py  xray.py  xtls.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: __init__.py  base.py  crud_config.py  crud_device.py  crud_node.py  crud_system_event.py  crud_user.py  crud_vpn_user.py  crud_xray.py
backend/app/db/: init_db.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: add_device_limit_to_user.py  create_all_tables.py  create_system_events_table.py
backend/app/models/: __init__.py  config_sync.py  config_version.py  device.py  node.py  subscription.py  system_event.py  traffic.py  types.py  user.py  vpn_user.py  xray.py
backend/app/schemas/: __init__.py  base.py  config.py  device.py  node.py  subscription.py  system_event.py  token.py  user.py  vpn_user.py  xray.py  xtls.py
backend/app/services/: __init__.py  auth.py  config_sync_service.py  device_limit_service.py  device_service.py  email.py  node.py  node_monitor.py  subscription.py  vpn_user.py  xray.py  xray_service.py  xtls_service.py
backend/scripts/: migrate.py
backend/tests/: conftest.py  requirements-test.txt  test_api_integration.py  test_node_model.py  test_system_events.py  test_xray_service.py
deploy/: install_docker.sh  install_master.sh  install_node.sh
docs/: README.md  index.md  update_docs.py
docs/admin/: README.md  backup.md  monitoring.md  nodes.md  settings.md  users.md
docs/api/: README.md  authentication.md  endpoints.md  errors.md  examples.md
docs/configuration/: README.md  database.md  email.md  environment.md  security.md
docs/development/: README.md  setup.md  structure.md  style.md
docs/installation/: README.md  master.md  node.md  requirements.md  upgrade.md
docs/user/: README.md  clients.md  devices.md  quickstart.md  stats.md
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.ts  index.css  index.tsx  react-app-env.d.ts
frontend/src/components/: ErrorAlert.tsx  Layout.tsx  PageContainer.tsx  ProtectedRoute.tsx  SimpleGrid.tsx
frontend/src/components/Layout/: AdminLayout.tsx
frontend/src/components/nodes/: NodeDetails.new.tsx  NodeDetails.tsx  NodeList.tsx
frontend/src/components/subscriptions/: SubscriptionLogsTab.tsx  SubscriptionOverviewTab.tsx  (+2 more)
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NodesPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  SubscriptionDetailsPage.tsx  SubscriptionsPage.tsx  UsersPage.tsx
frontend/src/services/: api.ts  authService.ts  dashboardService.ts  nodeService.ts  subscriptionService.ts  userService.ts
frontend/src/types/: node.ts  subscription.ts  user.ts
frontend/src/utils/: formatters.ts  gridUtils.tsx  queryUtils.ts  styledUtils.ts
scripts/: init_db.py  run_migrations.sh
(+4 files in other folders)
