[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-panel"
version = "0.1.0"
description = "VPN Panel Management System"
readme = "README.md"
authors = [
    { name = "Kavis", email = "kavis@example.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "sqlalchemy>=1.4.23",
    "alembic>=1.7.4",
    "psycopg2-binary>=2.9.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "emails>=0.6",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.2",
    "python-json-logger>=2.0.2",
    "gunicorn>=20.1.0",
    "celery[redis]>=5.2.2",
    "httpx>=0.22.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[project.scripts]
vpn-panel = "backend.app.main:main"

[project.entry-points.uvicorn]
app = "backend.app.main:app"

[tool.setuptools]
package-dir = { "" = "." }
packages = find:

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "alembic*"]
namespaces = true

[project.entry-points]
console_scripts = [
    "vpn-panel-cli=backend.app.cli:main",
    "vpn-panel=backend.app.main:main"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
