[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "vpn-panel"
version = "0.1.0"
description = "VPN Panel for managing VPN services"
authors = ["Kavis1 <kavis1@example.com>"]
readme = "README.md"
repository = "https://github.com/Kavis1/vpn-panel"
keywords = ["vpn", "panel", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "backend" },
    { include = "alembic" }
]
include = ["alembic.ini"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^0.21.0"
redis = "^4.4.0"
pydantic = "^1.10.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
celery = {extras = ["redis"], version = "^5.2.2"}
httpx = "^0.24.0"
emails = "^0.6"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"

[tool.poetry.scripts]
vpn-panel = "backend.app.main:main"

# Package include patterns are now in the main [tool.poetry] section

[project.entry-points]
console_scripts = [
    "vpn-panel-cli=backend.app.cli:main",
    "vpn-panel=backend.app.main:main"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
