[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-panel"
version = "0.1.0"
description = "VPN Panel Management System"
authors = [
    { name = "Kavis", email = "kavis@example.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
vpn-panel = "app.main:main"
